# ndb4cp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
devlog/: 2025-08-31-query.md  2025-08-31.md  2025-09-01-db-status.md  2025-09-01-mqtt-broker.md  2025-09-01-test-db.md  2025-09-02-arp.md  2025-09-02-cas-refresh-and-cli-refactor.md
hooks/: pre-commit
scripts/: check_privacy.py  ingest.py
src/ndb/: __init__.py  cli.py  db.py  discover.py  parsers.py  printer.py
tests/: test_query.py
